feat[학습테스트]: step3 자동차 경주 메인 실행 흐름 완성 - Step3Main 컨트롤러에 n회 반복하는 레이싱 게임 루프 적용 - 매 라운드마다 일급 컬렉션 크기만큼의 난수 리스트 생성 후 의존성 주입 - OutputMethod를 통해 현재 자동차들의 이동 상태(-) 출력 UI 연결 - 3단계 전체 요구사항 및 체크리스트 구현 완료